Fix input and select element too small on wizard

--- a/backend_theme/static/src/less/app_drawer.less
+++ b/backend_theme/static/src/less/app_drawer.less
@@ -200,3 +200,11 @@
       float: right;
   }
 }
+
+input:not([type="radio"]):not([type="checkbox"]) {
+  min-width: 110px;
+}
+
+select {
+  min-width: 110px;
+}
